--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,11 +40,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.Executor.jar}:\
-    ${reference.Parametros.jar}:\
-    ${reference.SQL.jar}:\
-    ${reference.Valor.jar}:\
-    ${reference.Arquivo.jar}
+    ${libs.Robo.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -97,16 +93,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
 platform.active=default_platform
-project.Arquivo=../../../../Users/ti01/Documents/NetBeans Projects/Java-Lib-Arquivo
-project.Executor=../../../../Users/ti01/Documents/NetBeans Projects/Java-Lib-Executor
-project.Parametros=../../../../Users/ti01/Documents/NetBeans Projects/Java-Lib-Parameters
-project.SQL=../../../../Users/ti01/Documents/NetBeans Projects/Java-Lib-Sql
-project.Valor=../../../../Users/ti01/Documents/NetBeans Projects/Java-Lib-Value
-reference.Arquivo.jar=${project.Arquivo}/dist/Arquivo.jar
-reference.Executor.jar=${project.Executor}/dist/Executor.jar
-reference.Parametros.jar=${project.Parametros}/dist/Parametros.jar
-reference.SQL.jar=${project.SQL}/dist/SQL.jar
-reference.Valor.jar=${project.Valor}/dist/Valor.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
