--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Robo.classpath}:\
     ${reference.Arquivo.jar}:\
     ${reference.Executor.jar}:\
     ${reference.Parametros.jar}:\
@@ -71,7 +70,7 @@ javadoc.encoding=${source.encoding}
 javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
-javadoc.notree=true
+javadoc.notree=false
 javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
