--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,19 +34,13 @@ dist.jar=${dist.dir}/Robo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.13.jar=..\\Java-Lib-Vendors\\mysql-connector-java-8.0.13.jar
 file.reference.SQL.jar=C:\\Dropbox\\Java\\Bibliotecas\\SQL\\store\\SQL.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.Arquivo.jar}:\
-    ${reference.Executor.jar}:\
-    ${reference.Parametros.jar}:\
-    ${reference.SQL.jar}:\
-    ${reference.Valor.jar}:\
-    ${file.reference.mysql-connector-java-8.0.13.jar}
+    ${libs.Robo.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -99,16 +93,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
 platform.active=default_platform
-project.Arquivo=../Java-Lib-Arquivo
-project.Executor=../Java-Lib-Executor
-project.Parametros=../Java-Lib-Parameters
-project.SQL=../Java-Lib-Sql
-project.Valor=../Java-Lib-Value
-reference.Arquivo.jar=${project.Arquivo}/dist/Arquivo.jar
-reference.Executor.jar=${project.Executor}/dist/Executor.jar
-reference.Parametros.jar=${project.Parametros}/dist/Parametros.jar
-reference.SQL.jar=${project.SQL}/dist/SQL.jar
-reference.Valor.jar=${project.Valor}/dist/Valor.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
