Remove librarie Robo of this project, the librari of Robo are to use only in other projects with .jar(s) of the dist folder of this project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,11 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Robo.classpath}
+    ${reference.FileManager.jar}:\
+    ${reference.Executor.jar}:\
+    ${reference.Parametros.jar}:\
+    ${reference.Valor.jar}:\
+    ${reference.Java-Lib-SimpleView.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -93,6 +97,16 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
 platform.active=default_platform
+project.Executor=../Java-Lib-Executor
+project.FileManager=../Java-Lib-FileManager
+project.Java-Lib-SimpleView=../Java-Lib-SimpleView
+project.Parametros=../Java-Lib-Parameters
+project.Valor=../Java-Lib-Value
+reference.Executor.jar=${project.Executor}/dist/Executor.jar
+reference.FileManager.jar=${project.FileManager}/dist/FileManager.jar
+reference.Java-Lib-SimpleView.jar=${project.Java-Lib-SimpleView}/dist/Java-Lib-SimpleView.jar
+reference.Parametros.jar=${project.Parametros}/dist/Parametros.jar
+reference.Valor.jar=${project.Valor}/dist/Valor.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
