Change class "Valor" to "BigDecimal"

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.FileManager.jar}:\
     ${reference.Executor.jar}:\
-    ${reference.Java-Lib-SimpleView.jar}
+    ${reference.SimpleView.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -97,10 +97,10 @@ native.bundling.enabled=true
 platform.active=default_platform
 project.Executor=../Java-Lib-Executor
 project.FileManager=../Java-Lib-FileManager
-project.Java-Lib-SimpleView=../Java-Lib-SimpleView
+project.SimpleView=../SimpleView
 reference.Executor.jar=${project.Executor}/dist/Executor.jar
 reference.FileManager.jar=${project.FileManager}/dist/FileManager.jar
-reference.Java-Lib-SimpleView.jar=${project.Java-Lib-SimpleView}/dist/Java-Lib-SimpleView.jar
+reference.SimpleView.jar=${project.SimpleView}/dist/SimpleView.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
