added mysql jar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jar=${dist.dir}/Robots.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.13.jar=D:\\NetBeansProjects\\Java-Lib-Vendors\\mysql-connector-java-8.0.13.jar
 file.reference.SQL.jar=C:\\Dropbox\\Java\\Bibliotecas\\SQL\\store\\SQL.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -42,7 +43,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.FileManager.jar}:\
     ${reference.Executor.jar}:\
-    ${reference.SimpleView.jar}
+    ${reference.SimpleView.jar}:\
+    ${file.reference.mysql-connector-java-8.0.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
