removido configuracoes netbeans

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "c:\\Users\\Administrador\\Documents\\Projetos\\Moresco\\FileManager\\dist\\FileManager.jar",
         "c:\\Users\\Administrador\\Documents\\Projetos\\Moresco\\SimpleView\\dist\\SimpleView.jar",
         "c:\\Users\\Administrador\\Documents\\Projetos\\Moresco\\Executor\\dist\\Executor.jar",
-        "c:\\Users\\Administrador\\Documents\\Projetos\\Moresco\\Jar-Vendors\\ini4j-0.5.4-jdk14.jar"
+        "c:\\Users\\Administrador\\Documents\\Projetos\\Moresco\\Jar-Vendors\\ini4j-0.5.4-jdk14.jar",
+        "e:\\Documents\\Projetos\\Moresco\\Executor\\Executor.jar",
+        "e:\\Documents\\Projetos\\Moresco\\Jar-Vendors\\ini4j-0.5.4-jdk14.jar"
     ]
 }
